[tool.poetry]
name = "monomerizer"
version = "0.1.0"
description = "Monomerize symmetric oligomeric barrels."
authors = ["Aron Broom <broomsday@gmail.com>"]
readme = "README.md"
packages = [{include = "monomerizer"}]

[tool.poetry.dependencies]
python = "^3.10"
volumizer = "^0.1.2"
jsonlines = "^3.1.0"
typer = "^0.9.0"
tqdm = "^4.65.0"

[tool.poetry.group.test.dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Homepage" = "https://github.com/broomsday/monomerizer"